# insurance-claims-advisor

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app/: requirements.txt
app/backend/: config.py  document_processor.py  run.py  smoke_langfuse.py
app/backend/policy_ingestion/: __main__.py  chunk.py  config.py  extract.py  inspect.py  layout.py  logging_config.py  models.py  pipeline.py  structure.py  visualize.py
app/frontend/: app.py
backend/: main.py
frontend/: app.py
research/: requirements.txt
research/eda/: run_ydata_profiling.py
