[project]
name = "claims-advisor"
version = "0.1.0"
description = "Insurance Claim Triage and Decision Support Application"
requires-python = ">=3.12,<3.13"

dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
