[project]
name = "claims-advisor"
version = "0.1.0"
description = "Insurance Claim Triage and Decision Support Application"
requires-python = ">=3.12,<3.13"

dependencies = [
        "streamlit>=1.35",
    	"fastapi>=0.115",
    	"uvicorn[standard]>=0.29",
	"requests>=2.33",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pre-commit>=4.0",
    "pytest>=8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.setuptools.packages.find]
include = ["backend*", "frontend*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
